--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>de.azcore</groupId>
+    <groupId>de.stem</groupId>
     <packaging>jar</packaging>
-    <name>AZCore-Runtime</name>
+    <name>STEM-SYSTEM</name>
     <version>0.0.1</version>
-    <artifactId>azcore-runtime</artifactId>
+    <artifactId>stem-system</artifactId>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -41,7 +41,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>de.azcore.azcoreRuntime.AZCoreRuntimeApp</mainClass>
+                            <mainClass>de.stem.stemSystem.STEMSystemApp</mainClass>
                             <classpathPrefix>lib/rt</classpathPrefix>
                         </manifest>
                     </archive>
