--- a/pom.xml
+++ b/pom.xml
@@ -90,80 +90,59 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>10.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>de.linzn</groupId>
             <artifactId>zSocket</artifactId>
             <version>1.2.1</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>de.linzn</groupId>
             <artifactId>openJL</artifactId>
             <version>1.0.0</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
-            <scope>compile</scope>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>de.linzn</groupId>
-            <artifactId>ch7466ce-api</artifactId>
-            <version>0.2.1</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>1.21</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>27.0.1-jre</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180813</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.15.1
-            </version>
+            <version>3.15.1</version>
         </dependency>
         <dependency>
             <groupId>de.linzn</groupId>
             <artifactId>simplyConfiguration</artifactId>
             <version>1.0</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>de.linzn</groupId>
             <artifactId>simplyDatabase</artifactId>
             <version>1.0</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>de.linzn</groupId>
             <artifactId>simplyLogger</artifactId>
             <version>1.0</version>
-            <scope>compile</scope>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.eclipse.paho</groupId>
