--- a/pom.xml
+++ b/pom.xml
@@ -96,8 +96,8 @@
         </dependency>
         <dependency>
             <groupId>de.linzn</groupId>
-            <artifactId>zSocket</artifactId>
-            <version>1.2.1</version>
+            <artifactId>stemLink</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>de.linzn</groupId>
