--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
             <id>Eclipse Paho Repo</id>
             <url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
         </repository>
+        <repository>
+            <id>Stem Builds Repository</id>
+            <url>https://builds.app.stem-system.de/plugin/repository/everything/</url>
+        </repository>
     </repositories>
 
     <build>
