--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <repository>
             <id>mvnrepository</id>
             <name>mvnrepository</name>
-            <url>http://www.mvnrepository.com</url>
+            <url>https://repo1.maven.org/maven2/</url>
         </repository>
         <repository>
             <id>Eclipse Paho Repo</id>
