--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         </repository>
         <repository>
             <id>Stem Builds Repository</id>
-            <url>https://builds.app.stem-system.de/plugin/repository/everything/</url>
+            <url>https://builds.mirranet.de/plugin/repository/everything/</url>
         </repository>
     </repositories>
 
